<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<PreferenceCategory android:title="@string/language_category_title">-->

    <!--&lt;!&ndash; Cambiar idioma &ndash;&gt;-->
    <!--<ListPreference-->
        <!--android:key="language"-->
        <!--android:title="@string/language"-->
        <!--android:entries="@array/pref_languages"-->
        <!--android:entryValues="@array/pref_languages"/>-->

    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/about_title">
    <!-- About (Información de la aplicación)-->
    <Preference
        android:key="about"
        android:title="@string/info" />

    <!-- Version -->
    <Preference
        android:key="version"
        android:title="@string/version"
        android:summary="@string/versionName" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/legal_title">
    <!-- Información legal -->
    <Preference
        android:key="legal"
        android:title="@string/terms"/>

    <!-- Contacto -->
    <Preference
        android:key="contact"
        android:title="@string/contact" />
    </PreferenceCategory>
</PreferenceScreen>