<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rG_appLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" >

        <RadioButton
            android:id="@+id/app_spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Spanish" />

        <RadioButton
            android:id="@+id/app_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/English" />

        <RadioButton
            android:id="@+id/app_german"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/German" />
    </RadioGroup>

</LinearLayout>